--- a/page/templates/cursos.html
+++ b/page/templates/cursos.html
@@ -1,12 +1,50 @@
-{% extends 'bases/base.html' %}
+{% extends 'bases/base.html' %} {% load static %}
 <!---->
-{% block content %}
-<!---->
-{{error}} {% for curso in cursos %}
-<p>{{curso.nombre_curso}}</p>
-<form action="{% url 'inscribirse' curso.id %}" method="post">
-  {% csrf_token %}
-  <button>Inscribirse</button>
-</form>
 
-{% endfor %} {% endblock content %}
+{% block head %}
+<title>Cursos - ED Courses</title>
+<script defer src="{% static 'js/courses.js' %}"></script>
+{% endblock %}
+<!---->
+
+{% block header %}
+<h1>Cursos</h1>
+<div></div>
+{% endblock %}
+<!---->
+
+{% block content %} {{error}}
+
+<section class="cards-grid">
+  {% for curso in cursos %}
+  <article class="card">
+    <img class="card__image" src="{{curso.img_curso.url}}" width="75" />
+    <p class="card__title">{{curso.nombre_curso}}</p>
+    <p class="card__description">{{curso.descripcion_curso}}</p>
+    <form
+      class="card__subscribe"
+      action="{% url 'inscribirse' curso.id %}"
+      method="post"
+    >
+      {% csrf_token %}
+      <button type="submit" class="card__subscribe__button">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="32"
+          height="32"
+          viewBox="0 0 24 24"
+        >
+          <path
+            fill="#FFF"
+            d="M4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm16-4H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm0 14H8V4h12v12zm-7-1h2v-4h4V9h-4V5h-2v4H9v2h4z"
+          />
+        </svg>
+        Inscribirse
+      </button>
+    </form>
+  </article>
+
+  {% endfor %}
+</section>
+
+{% endblock content %}
