--- a/page/templates/tareas.html
+++ b/page/templates/tareas.html
@@ -1,41 +1,87 @@
+{% extends 'bases/base.html' %} {% load static %}
 <!---->
-{% extends 'bases/base.html' %}
+
+{% block head %}
+<title>Tasks - ED Courses</title>
+<link rel="stylesheet" href="{% static 'css/task.css' %}" />
+<script defer src="{% static 'js/tasks.js' %}"></script>
+{% endblock %}
 <!---->
+
+{% block header %}
+<h1>Tareas</h1>
+<div></div>
+{% endblock %}
+<!---->
+
 {% block content %}
-<!---->
-{% for tarea in tareas %}
-<div style="border: 1px solid black" id="openModalBtn">
-  <p>{{tarea.id_tarea.titulo_tarea}}</p>
-  <p>{{tarea.id_tarea.descripcion_tarea}}</p>
-  <p>{{tarea.estado}}</p>
-</div>
-<div id="myModal" class="modal">
-  <div class="modal-content">
-    <span class="close">&times;</span>
-    <p>{{tarea.id}}</p>
-    <p>{{tarea.id_tarea.titulo_tarea}}</p>
-    <p>{{tarea.id_tarea.descripcion_tarea}}</p>
-    <p>{{tarea.estado}}</p>
-    <form action="{% url 'enviar_tarea' %}" method="post">
-      {% csrf_token %}
-      <input name="id" type="hidden" value="{{tarea.id}}" />
-      <input type="file" name="pdf_file" accept=".pdf" />
+<section class="cards-grid">
+  {% for tarea in tareas %}
+  <article class="card task-card">
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      width="75"
+      height="75"
+      viewBox="0 0 24 24"
+    >
+      <path
+        fill="#000000"
+        d="M6 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6H6m0 2h7v5h5v11H6V4m2 8v2h8v-2H8m0 4v2h5v-2H8Z"
+      />
+    </svg>
+    <p class="card__title">{{tarea.id_tarea.titulo_tarea}}</p>
+    <p class="card__description">{{tarea.id_tarea.descripcion_tarea}}</p>
+    <div class="card__subscribe">
+      <button
+        class="card__subscribe__button"
+        data-id="task-modal-{{ tarea.id }}"
+      >
+        Ver Tarea
+        <span class="card__subscribe__badge badge--{{tarea.estado }}"></span>
+      </button>
+    </div>
+  </article>
+  <div id="task-modal-{{ tarea.id }}" class="modal">
+    <div class="modal__overlay"></div>
+    <div class="modal__content">
+      <span class="close">&times;</span>
+      <p class="modal__title">{{ tarea.id_tarea.titulo_tarea }}</p>
+      <span class="card__subscribe__badge badge--{{ tarea.estado }}"
+        >{{ tarea.estado }}</span
+      >
+      <p class="modal__description">{{ tarea.id_tarea.descripcion_tarea }}</p>
+      <form action="{% url 'enviar_tarea' %}" method="post">
+        {% csrf_token %}
+        <input name="id" type="hidden" value="{{ tarea.id }}" />
+        <label class="file-input__label">
+          <input type="file" name="pdf_file" accept=".pdf" class="file-input" />
+        </label>
 
-      {% if tarea.estado == "Entregado" %}
-      <!---->
-      {% if tarea.puntos_hechos is None %}
-      <p>no corregido</p>
-      {% else %}
-      <p>{{tarea.puntos_hechos}} de {{tarea.id_tarea.puntos}}</p>
-      {% endif %}
+        <div class="modal__footer">
+          {% if tarea.estado == "Entregado" %}
+          <!---->
+          {% if tarea.puntos_hechos is None %}
+          <p>No corregido</p>
+          {% else %}
+          <p>{{tarea.puntos_hechos}}/{{tarea.id_tarea.puntos}}</p>
+          {% endif %}
+          <div class="buttons-group-flex">
+            <button type="button" class="button button--danger">Cancelar</button>
+            <button class="button button--primary" disabled>Subir Tarea</button>
+          </div>
 
-      <button disabled>Subir Tarea</button>
-      {% else %}
-      <button>Subir Tarea</button>
-      {% endif %}
-    </form>
+          {% else %}
+          <span></span>
+          <div class="buttons-group-flex">
+            <button type="button" class="button button--danger">Cancelar</button>
+            <button type="submit" class="button button--primary">Subir Tarea</button>
+          </div>
+          {% endif %}
+        </div>
+      </form>
+    </div>
   </div>
-</div>
-{% endfor %} {% endblock content %}
-
+  {% endfor %}
+</section>
+{% endblock content %}
 <!---->
