--- a/page/templates/puntajes.html
+++ b/page/templates/puntajes.html
@@ -1,7 +1,7 @@
 {% extends 'bases/base.html' %} {% block content %}
 <!---->
 
-<table>
+<table border="1px">
   <tr>
     <th>Curso</th>
     <th>Tareas Pendientes</th>
